# arcade

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Utils.cmake  _core_8hpp_source.html  _i_core_8hpp_source.html  _i_display_module_8hpp_source.html  _i_game_module_8hpp_source.html  _i_object_8hpp_source.html  _loader_8hpp_source.html  annotated.html  annotated_dup.js  bug.html  class_my_library_1_1_example-members.html  class_my_library_1_1_example.html  class_my_library_1_1_subclass_example-members.html  class_my_library_1_1_subclass_example.html  class_my_library_1_1_subclass_example.js  classarcade_1_1_core-members.html  classarcade_1_1_core.html  classarcade_1_1_core.js  classarcade_1_1_error-members.html  classarcade_1_1_error.html  classarcade_1_1_i_core-members.html  classarcade_1_1_i_core.html  classarcade_1_1_i_core.js  classarcade_1_1_loader-members.html  classarcade_1_1_loader.html  classarcade_1_1_loader.js  classdisplay_1_1_i_display_module-members.html  classdisplay_1_1_i_display_module.html  classdisplay_1_1_i_display_module.js  classdisplay_1_1_ncurses_renderer-members.html  classdisplay_1_1_ncurses_renderer.html  classdisplay_1_1_ncurses_renderer.js  classdisplay_1_1_s_d_l2_renderer-members.html  classdisplay_1_1_s_d_l2_renderer.html  classdisplay_1_1_s_d_l2_renderer.js  classdisplay_1_1_s_f_m_l_renderer-members.html  (+85 more)
.github/workflows/: doxygen.yml
docs/: Core Architecture.md  test.md
include/: ICore.hpp  IDisplayModule.hpp  IGameModule.hpp  IObject.hpp  Loader.hpp
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  pages_1.js  searchdata.js
src/: main.cpp
src/Core/: CMakeLists.txt  Core.cpp  Core.hpp  main.cpp
src/DisplayModules/: CMakeLists.txt
src/DisplayModules/SDL2/: CMakeLists.txt  sdl2.cpp  sdl2.hpp
src/DisplayModules/SFML/: CMakeLists.txt  sfml.cpp  sfml.hpp
src/DisplayModules/ncurses/: CMakeLists.txt  ncurses.cpp  ncurses.hpp
src/GameModules/: CMakeLists.txt
src/GameModules/Menu/: CMakeLists.txt  menu.cpp  menu.hpp
src/GameModules/nibbler/: CMakeLists.txt  nibbler.cpp  nibbler.hpp
src/GameModules/nibbler/lvl/: 1.lvl  10.lvl  11.lvl  13.lvl  14.lvl  15.lvl  16.lvl  17.lvl  18.lvl  19.lvl  2.lvl  20.lvl  22.lvl  23.lvl  24.lvl  25.lvl  26.lvl  27.lvl  28.lvl  29.lvl  3.lvl  30.lvl  31.lvl  32.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl
src/GameModules/snake/: CMakeLists.txt  snake.cpp  snake.hpp
src/Objects/Rectangle/: Rectangle.hpp
